manifests/prod/ingress.yaml
#manifests/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loveoffootball-prod-ingress
  namespace: azdevspace
  annotations:
    #kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "http"  # or "https"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - "loveoffootball.io"
    secretName: loveoffootball-tls
  rules:
    - host: "loveoffootball.io"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: feprod
                port:
                  number: 80
          # - path: "/image"
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: beprod
          #       port:
          #         number: 80
          # - path: "/api/submit-support"
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: beprod
          #       port:
          #         number: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwp-ingress-fe
  namespace: azdevspace
spec:
  podSelector:
    matchLabels:
      app: feprod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: nwp-ingress-be
#   namespace: azdevspace
# spec:
#   podSelector:
#     matchLabels:
#       app: beprod
#   policyTypes:
#     - Ingress
#   ingress:
#     - from:
#         - ipBlock:
#             cidr: 0.0.0.0/0
